[gd_scene load_steps=3 format=3 uid="uid://dklun6k51575d"]

[ext_resource type="PackedScene" uid="uid://bb58keqpmhsd4" path="res://scenes/thinkingland.tscn" id="1_b48us"]
[ext_resource type="Script" uid="uid://diwc1b6u6cfhk" path="res://scripts/viewport.gd" id="1_mjkpp"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mjkpp")
metadata/_edit_lock_ = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(960, 540)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Node2D" parent="SubViewportContainer/SubViewport" instance=ExtResource("1_b48us")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_top = -157.0
offset_right = 248.0
grow_vertical = 0

[node name="ScaleSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_top = 23.0
offset_right = 210.0
offset_bottom = 39.0
min_value = 1.0
max_value = 6.0
value = 1.0
scrollable = false
tick_count = 6
ticks_on_borders = true

[node name="ScaleLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 5.0
offset_right = 83.0
offset_bottom = 23.0
text = "Scale = 1"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 37.0
grow_vertical = 0
toggle_mode = true
text = "Opt"

[connection signal="value_changed" from="Panel/ScaleSlider" to="." method="_on_scale_slider_value_changed"]
[connection signal="toggled" from="Button" to="." method="_on_button_toggled"]
